--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "jest-fetch-mock": "^3.0.3",
+    "js-cookie": "^3.0.5",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
