--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "cookies-next": "^2.1.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "jest-fetch-mock": "^3.0.3",
